[bumpversion]
current_version = 3.3.1
commit = True
tag = False

[bumpversion:file:setup.py]

[bumpversion:file:img-proof/__init__.py]

[bumpversion:file:docs/source/conf.py]

[bumpversion:file:package/python3-img-proof.spec]

[tool:pytest]
norecursedirs = data .tox usr
testpaths = tests

[flake8]
exclude = data

[coverage:report]
fail_under = 90

[metadata]
license_file = LICENSE

