[bumpversion]
current_version = 5.0.0
commit = True
tag = False

[bumpversion:file:setup.py]

[bumpversion:file:img_proof/__init__.py]

[bumpversion:file:docs/source/conf.py]

[bumpversion:file:package/python3-img-proof.spec]

[tool:pytest]
norecursedirs = data .tox usr
testpaths = tests

[flake8]
exclude = data

[coverage:report]
fail_under = 90

[metadata]
license_file = LICENSE

